--- a/src/styles/common/_preloader.scss
+++ b/src/styles/common/_preloader.scss
@@ -1,4 +1,5 @@
 @use "../variables" as v;
+@use "sass:math";
 
 .main-preloader {
   position: fixed;
@@ -27,15 +28,14 @@
 }
 
 .preloader-video {
-  width: 50%;
-  height: auto;
-  max-height: 50vh;
-  object-fit: contain;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
   z-index: 10000;
   position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  top: 0;
+  left: 0;
+  transform: none;
   transition: opacity 0.8s ease, transform 0.8s ease;
 }
 
@@ -48,7 +48,7 @@
 
 .main-preloader.fade-out .preloader-video {
   opacity: 0.2;
-  transform: translate(-50%, -50%) scale(1.1);
+  transform: scale(1.05);
 }
 
 .particles-container {
@@ -86,8 +86,8 @@
 
 @for $i from 1 through 30 {
   .particles-container .particle:nth-child(#{$i}) {
-    top: calc(50% + #{random(200) - 100}px);
-    left: calc(50% + #{random(200) - 100}px);
+    top: calc(50% + #{math.random(200) - 100}px);
+    left: calc(50% + #{math.random(200) - 100}px);
     animation-delay: #{$i * 0.03}s;
   }
 }
@@ -165,7 +165,10 @@
   }
   100% {
     opacity: 0;
-    transform: translate(#{random(300) - 150}px, #{random(300) - 150}px)
+    transform: translate(
+        #{math.random(300) - 150}px,
+        #{math.random(300) - 150}px
+      )
       scale(0);
   }
 }
