--- a/src/components/common/PhotoGallery/PhotoGallery.scss
+++ b/src/components/common/PhotoGallery/PhotoGallery.scss
@@ -36,6 +36,8 @@
     flex: 0 0 100%;
     position: relative;
     cursor: pointer;
+    height: 100%;
+    width: 100%;
 
     &:hover .photo-gallery__main-image img {
       transform: scale(1.03);
@@ -46,10 +48,6 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
-
-    img {
-      transition: transform 0.5s ease;
-    }
   }
 
   &__description {
