--- a/src/components/common/PhotoGallery/PhotoGallery.scss
+++ b/src/components/common/PhotoGallery/PhotoGallery.scss
@@ -29,7 +29,8 @@
     display: flex;
     width: 100%;
     height: 100%;
-    transition: transform 0.5s cubic-bezier(0.2, 0.9, 0.3, 1);
+    transition: transform 0.7s ease;
+    will-change: transform;
   }
 
   &__main-slide {
@@ -48,6 +49,13 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      transition: transform 0.5s ease;
+    }
   }
 
   &__description {
