--- a/src/styles/pages/_design.scss
+++ b/src/styles/pages/_design.scss
@@ -7,7 +7,6 @@
   background: linear-gradient(to right, v.$almost-white, v.$milk);
   overflow: hidden;
 
-  // Декоративные элементы фона
   &::before {
     content: "";
     position: absolute;
@@ -43,12 +42,9 @@
   );
   margin-bottom: 80px;
   overflow: hidden;
-
-  // Убираем существующие border-radius и добавляем новый стиль закругления
   border-bottom-left-radius: 0;
   border-bottom-right-radius: 0;
 
-  // Декоративные элементы для современного вида
   &::before {
     content: "";
     position: absolute;
@@ -71,11 +67,10 @@
     z-index: 0;
   }
 
-  // Основное волновое закругление
   &::after {
     content: "";
     position: absolute;
-    bottom: -2px; // Небольшое перекрытие для стыковки
+    bottom: -2px;
     left: 0;
     width: 100%;
     height: 80px;
@@ -87,7 +82,6 @@
     z-index: 1;
   }
 
-  // Декоративные линии для современного вида
   .design-hero__decorative-line {
     position: absolute;
     height: 3px;
@@ -212,9 +206,11 @@
 
   &__image {
     width: 100%;
+    width: 100%;
     height: 100%;
     object-fit: cover;
-    transition: transform 0.6s ease;
+    transition: all 0.8s cubic-bezier(0.19, 1, 0.22, 1);
+    will-change: transform, filter;
   }
 
   &__image-overlay {
@@ -234,8 +230,8 @@
   &__content {
     padding: 25px;
     position: relative;
+    height: 250px;
 
-    // Декоративный элемент внутри карточки
     &::before {
       content: "";
       position: absolute;
@@ -256,6 +252,9 @@
     padding-left: 15px;
     color: v.$graphite-dark;
     transition: color 0.3s ease;
+    height: 50px;
+    display: flex;
+    align-items: center;
 
     &:hover {
       color: v.$dark-blue;
@@ -267,6 +266,7 @@
     line-height: 1.6;
     color: v.$graphite-medium;
     margin-bottom: 25px;
+    height: 70px;
   }
 
   &__button {
